After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 693981 - subparse: fix bogus discontinuity detection if offset not set on buffers
subparse: fix bogus discontinuity detection if offset not set on buffers
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
1.x
Other Linux
: Normal normal
: 1.0.6
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-02-16 19:12 UTC by Arnaud Vrac
Modified: 2013-03-22 11:12 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
fix off by one offset calculation (1.96 KB, patch)
2013-02-16 19:12 UTC, Arnaud Vrac
committed Details | Review

Description Arnaud Vrac 2013-02-16 19:12:54 UTC
Created attachment 236400 [details] [review]
fix off by one offset calculation

Discontinuities are detected in the subparse buffer chain function, because the buffer offset is used even when invalid. This results in the subtitle parser being reset, and some subtitle lines are not shown.

The attached patch is a trivial fix.
Comment 1 Arnaud Vrac 2013-02-16 19:13:21 UTC
The patch also removes the next_offset field which is not used.
Comment 2 Tim-Philipp Müller 2013-03-22 11:12:42 UTC
Thanks, pushed

 commit 4816885ce3e99ac6ff430e3bf40db2186b3f53e8
 Author: Arnaud Vrac <avrac@freebox.fr>
 Date:   Thu Feb 14 01:35:45 2013 +0100

    subparse: fix off by one offset calculation
    
    Do not use the buffer start offset when it is invalid, otherwise a
    discontinuity is detected on the next buffer, and the subtitle parser
    reset and some subtitle lines are not shown.
    
    Also remove unused next_offset field.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=693981